# testpad

./: .gitignore  .ignore  README.md  calibration_figure_2.py  calibration_resources.py  combined_calibration_figures_python.py  csv_graphs_hioki.py  csv_graphs_hioki_qml.py  environment-dev.yml  environment-release.yml  lc_circuit_matching.py  logo_testing.py  pixi.toml  pyproject.toml  pyrightconfig.json  resources.qrc  test_icon.txt  testpad-dev_environment.yml  testpad-release.spec  testpad-release_environment.yml  testpad_main.py  testpad_main.spec  testpad_tabs.py
.claude/: settings.local.json
.github/workflows/: dev-merge.yml  feature-checks.yml  hotfix-checks.yml  publish-release.yml  release-prep.yml  release.yml
adrian_sandbox/: adrian_sandbox.py
adrian_sandbox/burnin/: _axis_A_complete_raw_error_29.hdf5  _axis_A_complete_raw_error_5.hdf5  burnin_graph.py  burnin_tab.py  hdf5_errorfile_sandbox.ipynb
adrian_sandbox/nanobubbles/: nanobubbles_graph.py  nanobubbles_tab.py
adrian_sandbox/vol2press/: vol2press_calcs.py  vol2press_tab.py
build_config/: __init__.py  conda-lock-dev.yml  conda-lock-release.yml  qt.conf  runtime_hook_debug.py  runtime_hook_mpl.py  runtime_hook_qt.py  spec_common.py  testpad-dev.iss  testpad-dev.spec  testpad-portable.spec  testpad-release.iss  testpad-release.spec  testpad_main-dev.spec  testpad_main-portable.spec  testpad_main-release.spec  testpad_main.spec  testpad_main.spec.bak
burnin/: burnin_graph.py  burnin_stats.py  burnin_tab.py
calibration_reports/: calibration_resources.py  combined_calibration_figures_python.py  transducer_calibration_tab.py
docs/: BEST_PRACTICES.md  RELEASE_WORKFLOW.md  RELEASE_WORKFLOW_DIAGRAM.md  TROUBLESHOOTING.md  WORKFLOWS_SUMMARY.md  WORKFLOW_IMPROVEMENTS.md
eb50/: eb50_tab.py
hydrophone/: hydrophone_graph.py  hydrophone_tab.py
images/: ico_to_png.py
matching_box/: csv_graphs_hioki.py  lc_circuit_matching.py  matching_box_tab.py
nanobubbles/: 20250116_0005_size_488.txt  nanobubbles_graph.py  nanobubbles_graph2.py  nanobubbles_tab.py  nanobubbles_tab2.py
planning/: burnin-pdf-report-implementation-plan.md  code-quality-improvements.md  degasser-tab-feature-spec.md  degasser-tab-testing-plan.md  dissolved-ox-feature-spec.md  dissolved-ox-implementation.md  feature-spec-template.md  implementation-plan-template.md  performance-improvement-plan.md  weekly-schedule.md
rfb/: rfb_figures.py  rfb_tab.py
scripts/: README.md  build-dev.ps1  build-portable.ps1  build-release.ps1  build.ps1  bump_version.py  clean.ps1  run.ps1  setup-dev-env.ps1  setup-release-env.ps1
scripts/win/: build-dev.bat  build-portable.bat  build-release.bat  clean.bat  run.bat  setup-dev-env.bat  setup-release-env.bat
src/testpad/: __main__.py  testpad_main.py  version.py
src/testpad/config/: __init__.py  constants.py  defaults.py  plotting.py
src/testpad/core/burnin/: __init__.py  burnin_graph.py  burnin_presenter.py  burnin_stats.py  config.py  model.py
src/testpad/core/hydrophone/: hydrophone_graph.py
src/testpad/core/matching_box/: __init__.py  csv_graphs_hioki.py  lc_circuit_matching.py
src/testpad/core/nanobubbles/: nanobubbles_graph.py
src/testpad/core/plotting/: plotting.py
src/testpad/core/rfb/: rfb_figures.py
src/testpad/core/sweep_graphs/: sweep_graph.py
src/testpad/core/temp_analysis/: temperature_graph.py
src/testpad/core/transducer/: calibration_figure_2.py  calibration_resources.py  cm_data.py  combined_calibration_figures_python.py  linear_scan_graph_generator.py
src/testpad/core/vol2press/: vol2press_calcs.py
src/testpad/resources/: __init__.py  ico_to_png.py  icon_to_png.py
src/testpad/resources/mpl_cache/: README.txt  fontlist-v330.json  fontlist-v390.json
src/testpad/ui/: splash.py
src/testpad/utils/: add_ncycle_sweep_data_to_config_file.py  definitions.py  lineedit_validators.py  message_boxes.py  path_display.py  resources.py  trace_outputs.ipynb  vpp_stats.py
sweep_graphs/: sweep_graph.py  sweep_plot_tab.py
sweep_plotter/: sweep_graph.py  sweep_plot_tab.py
temp_analysis/: temp_analysis_tab.py  temp_analysis_tab.ui  temperature_graph.py  ui_temp_analysis_tab.py  ui_temp_analysis_tab.txt
tests/: _minimal_example.py  conftest.py  minimal_example.py
tests/test_modules/: test_burnin_model.py  test_degasser_model.py  test_degasser_view.py  test_generate_pdf_report.py
transducer/: add_ncycle_sweep_data_to_config_file.py  calibration_figure_2.py  calibration_resources.py  cm_data.py  combined_calibration_figures_python.py  linear_scan_graph_generator.py  trace_outputs.ipynb  transducer_calibration_tab.py  transducer_linear_tab.py
transducer_calibration/: combined_calibration_figures_python.py  transducer_calibration_tab.py
transducer_common/: calibration_figure_2.py  calibration_resources.py  cm_data.py
transducer_linear/: linear_scan_graph_generator.py  transducer_linear_tab.py
utilities/: add_ncycle_sweep_data_to_config_file.py  vpp_stats.py
vol2press/: AKA-Sweep-Analysis-Tab.txt  vol2press_calcs.py  vol2press_tab.py
(+48 files in other folders)
