[project]
name = "testpad"
version = "0.1.0"
description = "Multi-tool for QA and R&D at FUS Instruments"
readme = "README.md"
requires-python = ">=3.12.1, <3.14"
authors = [{ name = "Adrian", email = "adrian.veen@gmail.com" }]
dependencies = [
  "fpdf2",
  "h5py>=2.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyside6==6.9.3",
  "pyyaml>=6",
  "scipy>=1.11",
  "shiboken6==6.9.3",
]

[project.scripts]
testpad = "testpad.testpad_main:main"

[project.optional-dependencies]
dev = [
  "ipykernel>=7.0.1",
  "pytest>=8.4.2",
  "pytest-cov>=6.0.0",
  "ruff>=0.14.1",
  "pyinstaller>=6.16.0",
]

[dependency-groups]
dev = [
  "ty>=0.0.1a25",
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Set the line length (default: 88)
line-length = 88

[tool.ruff.lint]
extend-select = [
  "ALL",
  "PTH",
  "E501",
  "D417",
  "D401",
  "ERA001",
  "RET504",
  "Q000",
  "SIM105",
  "ANN",
  "EXE001"
]
ignore = [
  "T201",  # Checks for print statements.
  "DTZ005",  # Checks for datetime formatting (no timezone).
  "D203",  # Checks for blank lines at the end of the file.
  "D213",  # Checks for multi-line docstrings.
  "COM812",  # Checks for trailing commas in lists, tuples, and dicts.
  "INP001",  # Checks for packages that are missing an __init__.py file.
  "D100",  # Checks for undocumented public module definitions.
  "D104",  # Checks for undocumented public package definitions.
  "D107",  # Checks for public __init__ method definitions that are missing docstrings
  "FIX002",  # Checks for "TODO" comments.
  "N802",  # Checks for functions names that do not follow the snake_case naming convention. - include eventually
  "N806",  # Checks for the use of non-lowercase variable names in functions. - include eventually
  "ERA001",  # Checks for commented-out Python code.
  "TD002",  # Checks that a TODO comment includes an author.
  "TD003",  # Checks that a TODO comment is associated with a link to a relevant issue or ticket.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"tests_*.py" = ["S101"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces (recommended by PEP 8)
indent-style = "space"
# Use `\n` line endings for all files
line-ending = "cr-lf"
# Format code snippets in docstrings
docstring-code-format = true
# Respect magic trailing commas
skip-magic-trailing-comma = false
